--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ background-position: center;
     <h1 class="title"> 2023년 신년계획</h1>
     <p class="msg"> 올해는 꼭 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">웹 구현하기</div>
+        <div class="bucket img1 center done">웹 구현하기</div>
         <div class="bucket img2 center">앱 구현하기</div>
         <div class="bucket img2 center">소방설비기사(기계분야) 취득하기</div>
         <div class="bucket img1 center">주 4회 운동가기</div>
